force-app/main/default/objects/GiftEntryMatchingRule__mdt/GiftEntryMatchingRule__mdt.object-meta.xml
<CustomObject>
    <label>Gift Entry Matching Rule</label>
    <pluralLabel>Gift Entry Matching Rules</pluralLabel>
</CustomObject>