force-app/main/default/objects/GiftEntryMatchingRule__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>Is Active</label>
    <description>When unchecked, this rule is skipped entirely during batch processing.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>