force-app/main/default/objects/GiftEntryMatchingRule__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <description>Execution order within the same TargetField group. Lower number runs first. Stops evaluating further rules once a match is found.</description>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>