force-app/main/default/objects/GiftEntryMatchingRule__mdt/fields/SoqlWhereClause__c.field-meta.xml
<CustomField>
    <fullName>SoqlWhereClause__c</fullName>
    <label>SOQL WHERE Clause</label>
    <description>WHERE clause fragment for the matching SOQL query. Use {!GiftEntry.FieldApiName} tokens to reference GiftEntry field values at runtime. Example: Email = '{!GiftEntry.Email__c}'</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>