force-app/main/default/objects/GiftEntryMatchingRule__mdt/fields/TargetField__c.field-meta.xml
<CustomField>
    <fullName>TargetField__c</fullName>
    <label>Target Field</label>
    <description>API name of the GiftEntry lookup field to populate (e.g. DonorId, GiftCommitmentId).</description>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>