force-app/main/default/objects/GiftEntryMatchingRule__mdt/fields/TargetObject__c.field-meta.xml
<CustomField>
    <fullName>TargetObject__c</fullName>
    <label>Target Object</label>
    <description>API name of the SObject to query for a match (e.g. Account, GiftCommitment, Campaign).</description>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>